<resources>
    <string name="about_version">Beer Style Compendium v1.4.10</string>
    <string name="about_bjcp_begin">BJCP style guideline information is Copyright © 2025, BJCP, Inc. </string>
    <string name="about_bjcp_mid">Beer Judge Certification Program.</string>
    <string name="about_bjcp_end">Reproduced with permission.</string>
    <string name="about_author">Application authored by BJCP Certified Judge Richard Sheppard.</string>
    <string name="about_contributor">Contributions made by Michael Herbst and Paul Hayslett of the </string>
    <string name="about_ba">2021 Brewers Association Beer Style Guidelines used with permission of </string>
    <string name="about_ba_end">Brewers Association</string>
    <string name="about_report_begin">"Report any bugs or issues to "</string>
    <string name="about_report_end">Github Repository."</string>
    <string name="ABV">ABV</string>
    <string name="ABW">ABW</string>
    <string name="all">All</string>
    <string name="accessibility_advance_search">Advanced Search</string>
    <string name="accessibility_categories">Categories</string>
    <string name="accessibility_favorites">Favorites</string>
    <string name="accessibility_color_chart">Color Chart</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_hint">Search Styles</string>
    <string name="action_info">About</string>
    <string name="action_delete">Remove</string>
    <string name="action_select_all">Select All</string>
    <string name="app_name">Beer Style Compendium</string>
    <string name="beginSrm">Beginning S R M equal to </string>
    <string name="button_never_show">Never show again</string>
    <string name="button_ok">Ok</string>
    <string name="color_amber"><b>Amber</b></string>
    <string name="color_black"><b>Black</b></string>
    <string name="color_brown"><b>Brown</b></string>
    <string name="color_copper"><b>Copper</b></string>
    <string name="color_dark_brown"><b>Dark Brown</b></string>
    <string name="color_deep_amber"><b>Deep amber/light copper</b></string>
    <string name="color_deep_copper"><b>Deep copper/light brown</b></string>
    <string name="color_gold"><b>Gold</b></string>
    <string name="color_header"><b>Color</b></string>
    <string name="color_yellow"><b>Yellow</b></string>
    <string name="color_opague"><b>Black, opaque</b></string>
    <string name="color_straw"><b>Straw</b></string>
    <string name="color_very_dark_brown"><b>Very Dark Brown</b></string>
    <string name="ebc">EBC</string>
    <string name="endSrm">Ending S R M equal to </string>
    <string name="fg">FG</string>
    <string name="ibu">IBU</string>
    <string name="message_available_1">is not available for</string>
    <string name="message_available_2">showing English instead.</string>
    <string name="message_first">Release Notes version 1.4.10\n\n1. Configurable text size</string>
    <string name="no_search_results">No Results Found</string>
    <string name="not_enough_chars">Please enter at least 3 search characters.</string>
    <string name="og">OG</string>
    <string name="on_tap_success">"Successfully added to Bookmarks"</string>
    <string name="on_tap_delete">"Successfully removed from Bookmarks"</string>
    <string name="on_tap_empty">"Press and hold any Category or Sub-Category to save here."</string>
    <string name="plato">°P</string>
    <string name="reset">Reset</string>
    <string name="settings_alcohol">Alcohol %:</string>
    <string name="settings_color">Color:</string>
    <string name="settings_gravity">Gravity:</string>
    <string name="settings_language">Language:</string>
    <string name="settings_plato">Plato</string>
    <string name="settings_title">English titles:</string>
    <string name="settings_specific_gravity">SG</string>
    <string name="settings_guideline_name">Guideline: </string>
    <string-array name="settings_guidelines">
        <item>2015 BJCP</item>
        <item>2021 BJCP</item>
        <item>2021 BA</item>
    </string-array>
    <string name="settings_language_name">Language:</string>
    <string-array name="settings_languages">
        <item>English</item>
        <item>Español</item>
        <item>Українська</item>
    </string-array>
    <string name="settings_theme_name">Application Theme:</string>
    <string-array name="settings_app_themes">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="settings_font_size">Font Size:</string>
    <string-array name="settings_fontsize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="settings_volume">Volume</string>
    <string name="settings_weight">Weight</string>
    <string name="search">Search</string>
    <string name="srm">SRM</string>
    <string name="stats_header">Vital Statistics</string>
    <string name="stats_varies">Varies with style</string>
    <string name="textButtonMain">Ok</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_category_body">CategoryBodyActivity</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="title_activity_crash">Error in </string>
    <string name="title_activity_search_results">Results</string>
    <string name="title_activity_search_results_small">for</string>
    <string name="title_activity_settings">Settings</string>
    <string name="twitter_begin">Twitter:</string>
</resources>
